        b) in the final release:
            - an grouped list of changes after topic in an logical order with all not noticeable changes removed
        both can be followed by an table of issues starting with "fixed issues:" followed by an list of grouped after
        first obscures of the bug the list of issues with an short description and when based on an github bug report
        its id.


changelog of snapshot [next]
    WARNING: this snapshot WILL break some backward-compatibility as it moved a lot of stuff around. Use the constants
        in globals.py for allocation.
    WARNING: this snapshot adds data generators. They are useful, but currently complicated to set up. We will add
        in the future an mdk generator script for setting up an mdk package with all run-configurations,
        launcher bindings and useful helper scripts like building it into an final zip file
    WARNING: this snapshot changed the way how the dev-environment is packaged. This may lead into problems
    WARNING: this snapshot changed the way how final end-user directories look like and what can be modified,
        See globals.py for the locations, do NOT use G.local+"/build/[...]", use G.build+"/[...]"!!!!
    WARNING: as data generators are now an thing, you can NOT rely on that your game will load up completely as an mod.
        There is the extreme "--data-gen --exit-after-data-gen --no-window" mode in which no window will open
        (and as so now draw-events or user interactions are called, only ticks) and the game will exit after the
        data gen is finished (via an extra loading stage)

    - changed version tuple builder for mcpython
    - added profiler system with config options
    - refactored most of the stuff into the mcypthon-folder, but the folder itself is added to sys.path for backward
        compatibility [WARNING: this is an breaking change!!!!!!!!]
    - refactored much not-code related files into the home-folder