@@ -11,15 +11,16 @@ import math
 MC_VERSION_BASE = "1.15.2"
 VERSION_TYPE = "dev"
 # possible: [<pre>]<version>, <normal mc snapshot format>, snapshot dev <number of snapshot> cycle <cycle number>
-VERSION_NAME = "snapshot dev 2"
+VERSION_NAME = "20w24a"
 
-DEVELOPING_FOR = "20w23a"
-DEVELOPMENT_COUNTER = 2  # major step 2
+DEVELOPING_FOR = "20w24a"
+DEVELOPMENT_COUNTER = 3  # final: 3
 
 # list of all versions since 19w52a to indicate order of release; used in save files todo: export to other file
 VERSION_ORDER = ["19w52a", "20w05a", "20w07a", "20w09a", "20w10a", "20w11a", "20w12a", "20w12b", "20w14a",
                  "a1.0.0", "a1.0.1", "snapshot dev 1 cycle 1", "snapshot dev 1 cycle 2",
-                 "snapshot dev 1 cycle 3", "snapshot dev 1 cycle 4", "20w22a", VERSION_NAME]
+                 "snapshot dev 1 cycle 3", "snapshot dev 1 cycle 4", "20w22a", "snapshot dev 1",
+                 "snapshot dev 2", VERSION_NAME]
 
 FULL_VERSION_NAME = "mcpython version {} ({}) based on mc version {}".format(
     VERSION_NAME, VERSION_TYPE, MC_VERSION_BASE)
